--- a/src/assets/scss/_root.scss
+++ b/src/assets/scss/_root.scss
@@ -21,6 +21,14 @@
     --#{$variable-prefix}#{$color}-rgb: #{$value};
   }
 
+  //settingan warna logo
+  // @each $color, $value in $grays {
+  //   @include text-emphasis-variant('.text-gray-#{$color}', $value, true);
+  // }
+  // @each $color, $value in $colors {
+  //   @include text-emphasis-variant('.text-#{$color}', $value, true);
+  // }
+
   --#{$variable-prefix}white-rgb: #{to-rgb($white)};
   --#{$variable-prefix}black-rgb: #{to-rgb($black)};
   --#{$variable-prefix}body-color-rgb: #{to-rgb($body-color)};
